06_rtas.tf
resource "aws_route_table_association" "seungjun_rtas_a" {
  subnet_id      = aws_subnet.seungjun_puba.id
  route_table_id = aws_route_table.seungjun_rt.id
}

resource "aws_route_table_association" "seungjun_rtas_c" {
  subnet_id      = aws_subnet.seungjun_pubc.id
  route_table_id = aws_route_table.seungjun_rt.id
}
